--- a/prototype/package.json
+++ b/prototype/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@notionhq/client": "^2.2.2",
     "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0"
   }
 }
