--- a/prototype/package.json
+++ b/prototype/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0"
+    "graphql-request": "^5.0.0",
+    "twitter-api-sdk": "^1.2.1"
   }
 }
