--- a/prototype/package.json
+++ b/prototype/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.2",
+    "dependency-cruiser": "^12.1.0",
     "tsx": "^3.12.1"
   },
   "dependencies": {
