--- a/prototype/package.json
+++ b/prototype/package.json
@@ -8,7 +8,8 @@
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.2",
     "dependency-cruiser": "^12.1.0",
-    "tsx": "^3.12.1"
+    "tsx": "^3.12.1",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.2",
