--- a/prototype/.env.template
+++ b/prototype/.env.template
@@ -1,5 +1,5 @@
 NOTION_TOKEN=xxx
 NOTION_DAILY_LOG_DATABASE_ID=xxx
 NOTION_INTEGRATIONS_DATABASE_ID=xxx
-GITHUB_TOKEN=xxx
+GH_TOKEN=xxx
 TWITTER_BEARER_TOKEN=xxx
